[gd_scene load_steps=3 format=3 uid="uid://y3k7o4s86thv"]

[ext_resource type="Script" uid="uid://bp31e76f02xai" path="res://Scripts/game_over.gd" id="1_m5628"]
[ext_resource type="FontFile" uid="uid://cg6v0ne5hkvcv" path="res://Assets/Fonts/WDXLLubrifontTC-Regular.ttf" id="2_k52d1"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_m5628")

[node name="Background" type="ColorRect" parent="."]
offset_left = 248.5
offset_top = 129.0
offset_right = 903.5
offset_bottom = 519.0
color = Color(0.0253638, 0.0253638, 0.0253638, 1)

[node name="GameOverLabel" type="Label" parent="Background"]
layout_mode = 0
offset_top = 49.0
offset_right = 655.0
offset_bottom = 109.0
theme_override_fonts/font = ExtResource("2_k52d1")
theme_override_font_sizes/font_size = 50
text = "GAME OVER"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="Background"]
layout_mode = 0
offset_left = 123.0
offset_top = 154.0
offset_right = 266.0
offset_bottom = 243.0
theme_override_fonts/font = ExtResource("2_k52d1")
theme_override_font_sizes/font_size = 35
text = "Score:
0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="Background"]
layout_mode = 0
offset_left = 389.0
offset_top = 158.0
offset_right = 532.0
offset_bottom = 247.0
theme_override_fonts/font = ExtResource("2_k52d1")
theme_override_font_sizes/font_size = 35
text = "High Score:
"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="Background"]
layout_mode = 0
offset_left = 258.0
offset_top = 296.0
offset_right = 397.0
offset_bottom = 341.0

[node name="RestartLabel" type="Label" parent="Background/RestartButton"]
layout_mode = 0
offset_right = 139.0
offset_bottom = 45.0
theme_override_fonts/font = ExtResource("2_k52d1")
theme_override_font_sizes/font_size = 28
text = "Restart"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Background/RestartButton" to="." method="_on_restart_button_pressed"]
